cmake_minimum_required(VERSION 3.14)
project(treasury_sdn_plugin CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(treasury INTERFACE)
target_include_directories(treasury INTERFACE include)
add_executable(test_treasury tests/test_treasury.cpp)
target_link_libraries(test_treasury treasury)
enable_testing()
add_test(NAME treasury COMMAND test_treasury)
